--- a/templates/dashboard/cursos.html
+++ b/templates/dashboard/cursos.html
@@ -198,7 +198,7 @@
                     "data": null,
                     "render": function (data, type, row) {
                         return `
-                            <button class="btn btn-secondary btn-sm btnVer" data-id="${row.idcurso}">
+                            <button class="btn btn-primary btn-sm btnVer" data-id="${row.idcurso}">
                                 <i class="fas fa-eye"></i> Ver </button>
                             <button class="btn btn-warning btn-sm btnModificar" data-id="${row.idcurso}">Modificar</button>
                             <button class="btn btn-danger btn-sm btnEliminar" data-id="${row.idcurso}" data-nombre="${row.nombre}">Eliminar</button>
