Versio1.0_CRUD CursoxAmbiente

--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -126,7 +126,7 @@
 						</li>
 
 						<li class="sidebar-item">
-							<a class="sidebar-link" href="{{url_for('ambientesxcurso')}}">
+							<a class="sidebar-link" href="{{url_for('ambientesxCursos')}}">
 								<i class="align-middle" data-feather="check-square"></i> <span
 									class="align-middle">Ambientes por Curso</span>
 							</a>
